# bf-jit

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  crates.js  install_deps.sh  plot.py  requirements.txt  run.ps1  search-index.js  settings.html  source-files.js
bench/: Cargo.toml  all.html  constant.ARCH_NAME.html  constant.BAR1_COLOR.html  constant.BAR2_COLOR.html  constant.BAR3_COLOR.html  constant.BAR4_COLOR.html  constant.BAR5_COLOR.html  constant.BAR6_COLOR.html  constant.BENCH_DATA_DIR_NAME.html  constant.DATA_FILE_PREFIX.html  constant.GRAPH_NAME_PREFIX.html  constant.OS_NAME.html  constant.OUT_FILE_NAME.html  constant.RESOLUTION.html  fn.benchmark.html  fn.create_graph.html  fn.graph_results.html  fn.graph_results_for_file.html  fn.main.html  fn.measure_results.html  fn.measure_results_for_file.html  fn.output_data.html  fn.segmented_value_to_inner.html  index.html  macro.arch_id!.html  macro.arch_id.html  macro.arch_name!.html  macro.arch_name.html  macro.os_id!.html  macro.os_id.html  macro.os_name!.html  macro.os_name.html  sidebar-items.js  struct.ImplInfo.html  trait.RunFunction.html
bench/src/: lib.rs  main.rs
corpus/: optimizable-loops.bf
opinterp/: all.html  fn.run.html  index.html
opinterp2/: all.html  fn.run.html  index.html
opinterp3/: all.html  fn.run.html  index.html
opjit/: all.html  fn.run.html  index.html
simpleinterp/: all.html  fn.run.html  index.html  sidebar-items.js
simplejit/: all.html  fn.run.html  index.html  sidebar-items.js
tests/: Cargo.toml  output_tests.rs
util/: Cargo.toml  all.html  enum.BfError.html  (+8 more)
(+220 files in other folders)
