[package]
name = 'bench'
version = '0.1.0'
edition = '2021'
default-run = 'bench'

[dependencies]
opinterp = {path = '../vms/opinterp'}
opinterp2 = {path = '../vms/opinterp2'}
opinterp3 = {path = '../vms/opinterp3'}
opjit = {path = '../vms/opjit'}
plotters = '0.3.4'
simpleinterp = {path = '../vms/simpleinterp'}
simplejit = {path = '../vms/simplejit'}
util = {path = '../util'}
